fix: kyb shortcuts visibility

--- a/astro/src/components/patterns/Searchbox/SearchFooter.css
+++ b/astro/src/components/patterns/Searchbox/SearchFooter.css
@@ -8,7 +8,7 @@
       margin: 0;
     }
 
-    @media (min-width: 1024px) {
+    @media (--md-up) {
       display: flex;
     }
   }
